Prevent amount field pushing content off-screen

--- a/src/components/recurrences/recurrences.scss
+++ b/src/components/recurrences/recurrences.scss
@@ -20,7 +20,7 @@
 }
 
 .amount {
-  min-width: 72px;
+  min-width: 58px;
   max-width: 95px;
 }
 
